--- a/src/app/single-people/single-people.component.scss
+++ b/src/app/single-people/single-people.component.scss
@@ -9,6 +9,12 @@
   @include lores {
     padding: 12% 0;
   }
+  @include mobile {
+    padding: 15% 0;
+  }
+  @include xsmobile {
+    padding: 15% 0;
+  }
   width: 100%;
   &__block {
     width: 100%;
@@ -29,6 +35,14 @@
         font-size: 70px;
         margin-bottom: 30px;
       }
+      @include mobile {
+        font-size: 58px;
+        margin-bottom: 0;
+      }
+      @include xsmobile {
+        font-size: 48px;
+        margin-bottom: 0;
+      }
     }
     &__card {
       width: 95%;
@@ -36,8 +50,22 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: flex-start;
+      @include mobile {
+        flex-direction: column;
+        align-items: center;
+      }
+      @include xsmobile {
+        flex-direction: column;
+        align-items: center;
+      }
       &__profile {
         width: 30%;
+        @include mobile {
+          width: 70%;
+        }
+        @include xsmobile {
+          width: 75%;
+        }
         & img {
           width: 100%;
         }
@@ -51,6 +79,12 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        @include mobile {
+          width: 100%;
+        }
+        @include xsmobile {
+          width: 100%;
+        }
         p {
           color: $primaryColor;
           font-size: 22px;
@@ -62,6 +96,14 @@
           @include lores {
             font-size: 20px;
           }
+          @include mobile {
+            font-size: 18px;
+            font-weight: 600;
+          }
+          @include xsmobile {
+            font-size: 16px;
+            font-weight: 600;
+          }
         }
         &__bio {
           text-indent: 5em;
@@ -71,32 +113,63 @@
           @include lores {
             font-weight: 400 !important;
           }
+          @include mobile {
+            text-indent: 3em;
+            font-weight: 400 !important;
+            margin-bottom: 30px;
+          }
+          @include xsmobile {
+            text-indent: 3em;
+            font-weight: 400 !important;
+            margin-bottom: 30px;
+          }
         }
         &__movies {
           width: 100%;
-          display: flex;
-          flex-direction: row;
-          justify-content: space-around;
-          align-items: flex-start;
+          height: 100%;
+          display: grid;
+          grid-template-columns: repeat(6, 1fr);
+          grid-column-gap: 1em;
+          align-items: center;
           margin: 30px 0;
+          @include mobile {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            grid-column-gap: 1em;
+            grid-row-gap: 1em;
+          }
+          @include xsmobile {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            grid-column-gap: 1em;
+            grid-row-gap: 1em;
+          }
           &__unique {
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            width: 15%;
+            width: 100%;
+            height: 100%;
             &__poster {
               display: flex;
               flex-direction: column;
               justify-content: center;
               align-items: center;
               width: 100%;
+              height: 100%;
               overflow: hidden;
               transition: all 100ms ease-in-out;
               border: solid 2px $primaryColor;
               &:hover {
                 cursor: pointer;
                 box-shadow: 0 0 10px 2px $primaryColor;
+                @include mobile {
+                  box-shadow: 0 0 5px 2px $primaryColor;
+                }
+                @include xsmobile {
+                  box-shadow: 0 0 5px 2px $primaryColor;
+                }
                 img {
                   transform: scale(1.25);
                 }
@@ -116,6 +189,12 @@
           &:hover {
             cursor: pointer;
             text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
+            @include mobile {
+              text-shadow: 0 0 15px $primaryColor, 0 0 3px $secondaryColor;
+            }
+            @include xsmobile {
+              text-shadow: 0 0 15px $primaryColor, 0 0 3px $secondaryColor;
+            }
           }
         }
       }
@@ -133,11 +212,16 @@
         color: $primaryColor;
         font-size: 22px;
         font-weight: 700;
+        @include mobile {
+          font-size: 20px;
+          font-weight: 600;
+        }
+        @include xsmobile {
+          font-size: 20px;
+          font-weight: 600;
+        }
       }
       &__gallery {
-        display: flex;
-        flex-direction: row;
-
         width: 100%;
         height: 0;
         display: flex;
@@ -148,20 +232,26 @@
         padding-bottom: 25%;
         overflow: hidden;
         overflow-y: scroll;
+        @include mobile {
+          padding-bottom: 41%;
+        }
+        @include xsmobile {
+          padding-bottom: 42%;
+        }
         // Firefox custom scrollbar
         scrollbar-width: thin;
         scrollbar-color: $primaryColor $backgroundColor;
         // Webkit custom scrollbar
         &::-webkit-scrollbar {
-          width: 15px;
+          width: 10px;
         }
         &::-webkit-scrollbar-track {
-          background: $backgroundColor;
+          background: $primaryColor;
         }
         &::-webkit-scrollbar-thumb {
           background-color: $backgroundColor;
           border: 3px solid $primaryColor;
-          -webkit-box-shadow: inset 0 0 5px $primaryColor;
+          -webkit-box-shadow: inset 0 0 2px $primaryColor;
           box-shadow: inset 0 0 5px $primaryColor;
         }
         border: solid 3px $primaryColor;
@@ -173,9 +263,21 @@
           border: solid 2px $primaryColor;
           overflow: hidden;
           transition: box-shadow 100ms ease-in-out;
+          @include mobile {
+            width: 25%;
+          }
+          @include xsmobile {
+            width: 25%;
+          }
           &:hover {
             cursor: pointer;
             box-shadow: 0px 0px 10px 2px $primaryColor;
+            @include mobile {
+              box-shadow: 0px 0px 5px 2px $primaryColor;
+            }
+            @include xsmobile {
+              box-shadow: 0px 0px 5px 2px $primaryColor;
+            }
             img {
               transform: scale(1.2);
             }
@@ -190,30 +292,44 @@
       }
     }
     &__tmdbLink {
-      margin: 5em 0 0 -25em;
-      width: 50%;
-      color: white;
-      font-size: 20px;
-      @include smalldesk {
-        font-size: 14px;
-        margin: 5em 0 0 -30em;
-      }
-      @include lores {
-        font-size: 14px;
-        margin: 5em 0 0 -20em;
-      }
-      font-weight: 500;
       display: flex;
       flex-direction: row;
       justify-content: left;
       align-items: center;
+      width: 95%;
+      margin-top: 3em;
+      margin-bottom: 3em;
+      color: white;
+      font-size: 20px;
+      @include smalldesk {
+        font-size: 14px;
+      }
+      @include lores {
+        font-size: 14px;
+      }
+      @include mobile {
+        font-size: 12px;
+      }
+      @include xsmobile {
+        font-size: 12px;
+      }
+      font-weight: 500;
       &__logo {
         margin-left: 1em;
         border-radius: 2em;
         padding: 0.2em 0.3em;
-        width: 12%;
+        width: 150px;
         @include smalldesk {
-          width: 15%;
+          width: 100px;
+        }
+        @include lores {
+          width: 100px;
+        }
+        @include mobile {
+          width: 80px;
+        }
+        @include xsmobile {
+          width: 80px;
         }
         display: flex;
         flex-direction: row;
