--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -83,9 +83,18 @@ footer {
       a {
         background-color: $backgroundColorA;
         border-radius: 20px;
-        width: 25%;
+        width: 130px;
+        @include smalldesk {
+          width: 120px;
+        }
         @include lores {
-          width: 33%;
+          width: 110px;
+        }
+        @include mobile {
+          width: 90px;
+        }
+        @include xsmobile {
+          width: 80px;
         }
         padding: 0.5% 2%;
         display: flex;
