--- a/src/app/view-image/view-image.component.scss
+++ b/src/app/view-image/view-image.component.scss
@@ -14,6 +14,12 @@
   @include lores {
     padding: 15% 0;
   }
+  @include mobile {
+    flex-direction: column;
+  }
+  @include xsmobile {
+    flex-direction: column;
+  }
   &__buttons {
     align-self: flex-start;
     margin-top: 10%;
@@ -21,6 +27,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @include mobile {
+      flex-direction: row-reverse;
+      width: 100%;
+    }
+    @include xsmobile {
+      flex-direction: row-reverse;
+      width: 100%;
+    }
     &__unique {
       background-color: $backgroundColor;
       color: $primaryColor;
@@ -43,6 +57,20 @@
       @include lores {
         transform: scale(0.7);
       }
+      @include mobile {
+        width: 50%;
+        transform: scale(0.6);
+        font-size: 22px;
+        font-weight: 600;
+        margin-bottom: 50px;
+      }
+      @include xsmobile {
+        width: 50%;
+        transform: scale(0.6);
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 50px;
+      }
       i {
         font-size: 32px;
         transform: scale(1);
@@ -56,6 +84,12 @@
         text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
         i {
           transform: scale(1.1);
+          @include mobile {
+            transform: scale(1.06);
+          }
+          @include xsmobile {
+            transform: scale(1.06);
+          }
         }
         &::before {
           opacity: 1;
@@ -85,5 +119,13 @@
   &__display {
     width: 66%;
     margin-bottom: 100px;
+    @include mobile {
+      width: 95%;
+      margin-bottom: 30px;
+    }
+    @include xsmobile {
+      width: 95%;
+      margin-bottom: 30px;
+    }
   }
 }
