Slight adjusts. Responsive 100%. Added disclaimer. Adjusted loader. V1.00 ready to deploy.

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -17,9 +17,8 @@
     </p>
     <p>
       Vous pouvez rechercher un film ou une personnalité via la page de
-      recherche, ou bien vous laisser surprendre par une œuvre au hasard parmi
-      les films sortis à la période actuelle au cours des 100 dernières années,
-      en cliquant sur le point d'interrogation!
+      recherche, ou bien vous laisser surprendre par une œuvre au hasard, en
+      cliquant sur le point d'interrogation!
     </p>
     <div class="home__welcomeMessage__links">
       <div class="home__welcomeMessage__links__unique" (click)="onDiscover()">
