Slight adjusts. Cancelled disclaimer for now.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,17 @@
 <footer>
   <nav class="navmenu">
     <ul class="navmenu__list">
-      <li class="navmenu__list__unique">© Sym3ioZ prods.</li>
-      <li class="navmenu__list__unique">01-2023</li>
+      <li class="navmenu__list__unique">© Sym3ioZ prods. 2023</li>
+      <li class="navmenu__list__unique social">
+        <a href="https://twitter.com/BTortevois" target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100089620328247"
+          target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+      </li>
       <li class="navmenu__list__unique">
         Powered by:&nbsp;
         <a href="https://themoviedb.org" target="_blank"
