--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
   <div class="logo">
     <img
       class="logo__image"
-      src="../../assets/logo_screenlovers.png"
+      src="assets/logo_screenlovers.png"
       alt="screenlovers logo"
     />
     <h2>(Re)découvrez le cinéma</h2>
