--- a/src/app/allmovies/allmovies.component.html
+++ b/src/app/allmovies/allmovies.component.html
@@ -16,7 +16,7 @@
             [src]="
               movie.poster_path
                 ? posterUrl + movie.poster_path
-                : '../assets/default_poster.png'
+                : 'assets/default_poster.png'
             "
           />
         </div>
