--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
       <li class="navmenu__list__unique">
         Powered by:&nbsp;
         <a href="https://themoviedb.org" target="_blank"
-          ><img src="../../assets/logo_tmdb.svg" alt="logo tmdb"
+          ><img src="assets/logo_tmdb.svg" alt="logo tmdb"
         /></a>
       </li>
     </ul>
