--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -17,7 +17,7 @@
 <div class="loading" id="loading">
   <div class="neon">
     <div class="neon__logo">
-      <img src="../../assets/logo_screenlovers.png" />
+      <img src="assets/logo_screenlovers.png" />
     </div>
   </div>
   <div class="burger">
