--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -67,7 +67,7 @@
               [src]="
                 movie.poster_path
                   ? posterUrl + movie.poster_path
-                  : '../assets/default_poster.png'
+                  : 'assets/default_poster.png'
               "
             />
           </div>
@@ -135,7 +135,7 @@
               [src]="
                 people.profile_path
                   ? posterUrl + people.profile_path
-                  : '../assets/default_profile.png'
+                  : 'assets/default_profile.png'
               "
             />
           </div>
@@ -154,7 +154,7 @@
                   [src]="
                     movie.poster_path
                       ? posterUrl + movie.poster_path
-                      : '../assets/default_poster.png'
+                      : 'assets/default_poster.png'
                   "
                 />
               </div>
