--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,7 +10,7 @@
         [src]="
           movie[randomNumber].poster_path
             ? posterUrl + movie[randomNumber].poster_path
-            : '../../assets/default_poster.png'
+            : 'assets/default_poster.png'
         "
       />
     </div>
