--- a/src/app/single-people/single-people.component.html
+++ b/src/app/single-people/single-people.component.html
@@ -51,7 +51,7 @@
                 [src]="
                   movie.poster_path
                     ? posterUrl + movie.poster_path
-                    : '../assets/default_poster.png'
+                    : 'assets/default_poster.png'
                 "
                 title="{{ movie.title }}"
               />
@@ -97,7 +97,7 @@
         [href]="'https://www.themoviedb.org/person/' + people.id"
         target="_blank"
       >
-        <img src="../../assets/logo_tmdb.svg" alt="tmdb logo" />
+        <img src="assets/logo_tmdb.svg" alt="tmdb logo" />
       </a>
     </div>
   </div>
