--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -205,6 +205,7 @@ header {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
+        color: $primaryColor;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -ms-flex-direction: row;
