--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -22,10 +22,10 @@
   </div>
   <div class="burger">
     <div class="burger__button">
-      <div class="burger__button__bar" id="bar1"></div>
-      <div class="burger__button__bar" id="bar2"></div>
-      <div class="burger__button__bar" id="bar3"></div>
-      <div class="burger__button__arrows" id="burgerArrows">
+      <div class="burger__button__bar"></div>
+      <div class="burger__button__bar"></div>
+      <div class="burger__button__bar"></div>
+      <div class="burger__button__arrows">
         <i class="fa-solid fa-down-left-and-up-right-to-center"></i>
       </div>
     </div>
