Fixed adult movies on landing page issue. Fixed some responsive issues.

--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -459,6 +459,12 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        @include mobile {
+          justify-content: center;
+        }
+        @include xsmobile {
+          justify-content: center;
+        }
         &__unique {
           &__card {
             width: 150px;
