--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -59,6 +59,9 @@ footer {
       @include mobile {
         font-size: 28px;
       }
+      @include xsmobile {
+        font-size: 24px;
+      }
       &:first-child {
         margin-right: 1em;
         @include lores {
@@ -71,7 +74,6 @@ footer {
       }
     }
     &__unique {
-      // width: 30%;
       color: $backgroundColor;
       font-weight: 500;
       font-size: 20px;
